fix mobile hover, fonts and scroll flicker

--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,13 +1,15 @@
 /* ── FONTS ── */
 @font-face {
   font-family: 'Monument';
-  src: url('../assets/fonts/MonumentExtended-Regular.otf') format('opentype');
+  src: url('../assets/fonts/MonumentExtended-Regular.woff2') format('woff2'),
+       url('../assets/fonts/MonumentExtended-Regular.otf') format('opentype');
   font-weight: 400; font-style: normal;
   font-display: swap;
 }
 @font-face {
   font-family: 'Monument';
-  src: url('../assets/fonts/MonumentExtended-Ultrabold.otf') format('opentype');
+  src: url('../assets/fonts/MonumentExtended-Ultrabold.woff2') format('woff2'),
+       url('../assets/fonts/MonumentExtended-Ultrabold.otf') format('opentype');
   font-weight: 800; font-style: normal;
   font-display: swap;
 }
